# capillarity

./: README.md  algo.txt  angle.lua  clean.cmake  creneau.plt  lens.prm  makefile  run_angle.sh  run_cbridge.sh  run_cbridge2.sh  run_cbridge3.sh  run_cbridge_teflon.sh  shift  sphere2.prm  verre.prm
data/: 12.5mC_R74.4mm.txt  1500rpm.txt  3000rpm.txt  350rpm.txt  750rpm.txt  enfoncement.txt  tirage.txt  verre.txt
data/article/: A_h_N11t1_13juil2016_cycle_complet_enfoncement_tirage.txt
data/curves2/: enfoncement.txt  tirage.txt
data/curves3/: N10s v=5 enfoncement1.txt  N10s v=5 tirage1.txt  N10s v=5 tirage2.txt  N10s v=5 tirage3.txt  N10sv5enfoncement1.txt  N10sv5enfoncement2.txt  N10sv5enfoncement3.txt  N10sv5tirage1.txt  N10sv5tirage2.txt  N10sv5tirage3.txt  clip.txt
data/curves4/: N10sR80.txt  N11sR81.5v2.txt  N11sR81.txt  N11sv=10.txt  N11sv=25.txt  N11sv=5.txt
data/drop/: N11sthetaA_hyst0026.tif  N11sthetaR__hyst0101.tif
data/drop_bino/: theta_A_N10s_e.tif  theta_A_N11s_5.tif  theta_A_N11t_1.tif  theta_R_N10s_e.tif  theta_R_N11s_5.tif  theta_R_N11t_1.tif
data/drop_bino2/: N11s_5_zoom1_1_hyst.tif  N11s_5_zoom1_1_hyst0012.tif  N11s_5_zoom1_1_hyst0015.tif  N11s_5_zoom1_1_hyst0021.tif  N11s_5_zoom3_4_hyst.tif  N11s_5_zoom3_4_hyst0014.tif  N11s_5_zoom3_4_hyst0023.tif  N11s_5_zoom3_4_hyst0025.tif
data/emilie/: N10sR80v5_enfoncement.txt  N10sR80v5_tirage.txt  N11sR81.5v5_enfoncement.txt  N11sR81.5v5_tirage.txt  N11sR81v10_enfoncement.txt  N11sR81v10_tirage.txt  N11sR81v10enfoncement.txt  N11sR81v25_enfoncement.txt  N11sR81v25_tirage.txt  N11sR81v5_bis_tirage.txt  N11sR81v5_enfoncement.txt  N11sR81v5_tirage.txt  clip.txt
data/lenses/: Cam2_1_1280x1024_26_0000.coords  Cam2_1_1280x1024_26_0000.txt
data/manip_N11_15_04_2019/: 3eme_tirage_100micrometreparsec.txt  (+13 more)
data_speed/: 0_enfoncement_5micronmpars.txt  0_tirage_5micronmparsec.txt  1_enfoncement_50micronmpars.txt  1_tirage_50micronmpars.txt  2_enfoncement_100micronmparsec_suite_1.txt  2_tirage_100micronmparsec_suite_1.txt  3_enfoncement_500micronmparsec_suite.txt  3_tirage_500micronmparsec_suite.txt  4_enfoncement_1000micronmparsec_suite.txt  4_tirage_1000micronmparsec_suite.txt  5_enfoncement_2000micronmparsec_suite.txt  5_tirage_2000micronmparsec_suite.txt  6_enfoncement_200micronmparsec_suite-1.txt  6_tirage_200micronmparsec_suite_1.txt  7_enfoncement_100micronmparsec_suite_2.txt  7_tirage_100micronmparsec_suite_2.txt  8_enfoncement_200micronmparsec_suite_2.txt  8_tirage_200micronmparsec_suite_2.txt
doc/: curvature.wxmx  makefile  shape.tex  shape_v2.tex  shape_v3.tex  shape_v4.tex  spherical.wxmx
old/: sphere.prm  sphere3.prm  verre2.prm
paper_data/: A_h_N11s_enfoncement_5µmpars.txt  A_h_N11s_tirage_5µmpars.txt  A_h_depart.R80.txt  A_h_depart.R82.txt  A_h_depart.txt  A_h_depart_enfoncement.txt  A_h_tirage5µmpars.txt  Aire_mm2_h_mm.R80.txt  Aire_mm2_h_mm.R82.txt  Aire_mm2_h_mm.txt
paper_review/: enfoncemnt2_30sep2015_verrevierge_R56mm.txt
pour_anr/: enfoncement.txt  enfoncement_5.txt  process.sh  tirage.txt  tirage_5.txt
src/: CMakeLists.txt  build_time.cpp  contact_angle.cpp  contact_angle2.cpp  contact_angle3.cpp  contact_angle_v4.cpp  cut_area_height.cpp  extract_lens.cpp  gather_angles.cpp  parabole.cpp  polar.cpp  switch_cols.cpp  water.cpp
src/arch/cbridge/: application.cpp  application.hpp
src/arch/cbridge/old/: extheta_raw.cpp  setup.cpp
src/arch/cbridge2/: CMakeLists.txt
src/arch/cbridge5/: CMakeLists.txt
src/arch/cbridge7/: bridge-hmax.cpp  bridge-theta.cpp  lens.cpp
src/arch/cbridge8/: bridge-data.cpp  bridge-theta.cpp
src/arch/cbridge9/: bridge.cpp  fit_lens.cpp  lens.hpp  main.cpp
src/arch/cbridge_v2/: CMakeLists.txt  bridge-ode.cpp  bridge-theta.cpp  bridge.hpp  extract_v2.cpp  find_core.cpp  find_theta.cpp  find_theta_v2.cpp  par_bridge.cpp
src/arch/fit_lens/: sim_lens.cpp
src/cbridge/: CMakeLists.txt  application.cpp  application.hpp  bridge.cpp  bridge.hpp  compute_theta_v1.cpp  extheta_raw.cpp  heuristic.cpp  processor.hpp  setup.hpp
src/cbridge/old/: extheta.cpp
src/cbridge10/: CMakeLists.txt  abacus.cpp  bridge.cpp  bridge.hpp  extheta.cpp  heuristic.cpp  limits.cpp  main.cpp  setup.cpp  setup.hpp
src/cbridge3/: CMakeLists.txt  cbridge3.cpp
src/cbridge4/: CMakeLists.txt  abacus.cpp  application.cpp  application.hpp  application_v2.cpp  bridge-alpha.cpp  bridge-ode.cpp  bridge-params.cpp  bridge-theta.cpp  bridge.cpp  bridge.hpp  cbridge4.cpp  find-alpha.cpp  find-theta.cpp  main-core.cpp  main.cpp  theta-of-alpha.cpp
src/cbridge5/: cbridge5.cpp
src/cbridge6/: CMakeLists.txt  cbridge6.cpp
src/cbridge7/: CMakeLists.txt  abacus.cpp  bridge-alpha.cpp  bridge-data.cpp  bridge-hmax.cpp  bridge-mt.cpp  bridge-ode.cpp  bridge-opt.cpp  bridge-theta.cpp  bridge.cpp  bridge.hpp  cbridge7.cpp  datafile.cpp  datafile.hpp  lens.cpp  lens.hpp  window.cpp  window.hpp  worker.hpp
src/cbridge8/: CMakeLists.txt  abacus8.cpp  bridge-alpha.cpp  bridge-data.cpp  bridge-ode.cpp  bridge.cpp  bridge.hpp  cbridge8.cpp  datafile.cpp  datafile.hpp  lens.cpp  lens.hpp  vlens.cpp  vlens.hpp
src/cbridge9/: CMakeLists.txt  abaccus.cpp  bridge.cpp  bridge.hpp  find_lens.cpp  fit_lens.cpp  geom.cpp  lens.cpp  lens.hpp  main.cpp  profile.cpp  real_lens.cpp
src/cbridge_v2/: CMakeLists.txt  abacus_v2.cpp  bridge-alpha.cpp  bridge-fcn.cpp  bridge-ode.cpp  bridge-theta.cpp  bridge.cpp  bridge.hpp  extract_v2.cpp  find_alpha.cpp  find_core.cpp  find_theta_v2.cpp  h_of_xi.cpp  main.cpp  par_bridge.cpp  par_bridge.hpp
src/cbridge_v3/: CMakeLists.txt  abacus.cpp  build_time.cpp  cbridge-alpha.cpp  cbridge-ode.cpp  cbridge-theta.cpp  cbridge-xi.cpp  cbridge.cpp  cbridge.hpp  find-alpha.cpp  find-theta-xi.cpp  find-theta.cpp  main-core.cpp  main.cpp  par-bridge.cpp  par-bridge.hpp  sim_evap.cpp
src/fit_lens/: CMakeLists.txt  build_lens.cpp  fit_lens.cpp  sim_lens.cpp
verre_vierge/: run.sh  vierge_tirage100mu_R81mm.txt  vierge_tirage20mu_R81mm.txt  vierge_tirage50mu_R81mm.txt  vierge_tirage5mu_R81mm.txt  vierge_tirage5mu_R81mm_bis.txt
water_levels/: manip_a_N11_18_07_2017.txt
(+249 files in other folders)
